# iBTC

./: README.md
cv_bridge/: CMakeLists.txt
cv_bridge/src/: module.hpp
iBTC/: CMakeLists.txt  package.xml
iBTC/config/: config_avia.yaml  config_avia_drone.yaml  config_velo_kitti_fine.yaml  config_velo_nclt.yaml  config_velo_newercollege.yaml
iBTC/eval/: calc_pr_overlap.m  calc_pr_overlap_together.m  read_from_file.m
iBTC/eval/hotel1/: lc_gt_doc_hotel1.txt
iBTC/include/: ibtc.h
iBTC/launch/: loop_test_rgb_avia_MARSdataset.launch  loop_test_rgb_avia_hkumb.launch  loop_test_rgb_avia_privatedata.launch  loop_test_rgb_kitti.launch  loop_test_rgb_velo_nclt.launch  loop_test_rgb_velo_newercollege.launch  online_loop_test.launch
iBTC/rviz_cfg/: loop.rviz
iBTC/src/: ibtc.cpp  online_rgb_loop_detection.cpp  rgb_loop_detection.cpp
